[project]
name = "beeware-tutorial"
version = "0.1.0"
description = ""
authors = [
  { name = "Your Name", email = "you@example.com" }
]

requires-python = ">=3.13"
dependencies = [
  "faker>=37.4.0,<38.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
